# cutler

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE.md  NOTICE  README-OLD.md  README.md  RELEASE.md  build.rs  generate_md.sh  hookman.toml  install.sh  mise.toml  uninstall.sh
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: deploy-to-pages.yml  deploy.yml  release.yml  tests-force.yml  tests.yml
.zed/: tasks.json
book/: advanced.md  book.toml  global-flags.md  homebrew.md  introduction.md  quickstart.md
book/src/: SUMMARY.md  backend-preferences.md  basic-usage.md  config-management.md  configuration.md  contributing.md  external-commands.md  faq.md  homebrew.md  installation.md  introduction.md  license.md  quickstart.md  resources.md  shell-integrations.md  system-preferences.md  uninstallation.md  usage.md
book/src/backends/: system-preferences.md
book/src/guidelines/: contributing.md
book/src/installation/: installation-methods.md
book/src/misc/: uninstallation.md
book/src/references/: license.md  resources.md
book/src/usage/: basics-and-system-settings.md  homebrew-backups.md  quickstart.md  remote-config-and-sync.md
book/theme/: index.hbs  machlit.css  mdbook-brew.css  mdbook-homebrew.css
components/prj/: happy.aseprite
dev-docs/: help.html  search-index.js
dev-docs/cutler/: index.html
dev-docs/cutler/cli/: enum.Commands.html  sidebar-items.js
examples/: advanced.toml  advanced_types.toml  basic.toml  brew.toml  complete.toml  cutler.toml
landing/: index.html  styles.css
landing/dev-docs/: crates.js  settings.html  src-files.js
man/man1/: cutler.1
scripts/: generate_md.sh
src/: autosync.rs  cli.rs  commands.rs  completions.rs  config.rs  defaults.rs  domains.rs  external.rs  helpers.rs  lib.rs  logging.rs  main.rs  snapshot.rs
src/brew/: core.rs  mod.rs  types.rs  utils.rs  xcode.rs
src/cli/: args.rs  atomic.rs  completion.rs  mod.rs  style.rs
src/commands/: apply.rs  brew.rs  brew_backup.rs  brew_install.rs  check_update.rs  cmd.rs  completion.rs  config.rs  config_delete.rs  config_show.rs  cookbook.rs  exec.rs  fetch.rs  init.rs  lock.rs  mod.rs  reset.rs  self_update.rs  status.rs  unapply.rs  unlock.rs  update.rs
src/config/: core.rs  loader.rs  mod.rs  path.rs  remote.rs  utils.rs
src/defaults/: executor.rs  flags.rs  lock.rs  mod.rs
src/domains/: collector.rs  convert.rs  core.rs  mod.rs
src/exec/: core.rs  mod.rs  runner.rs
src/mas/: core.rs  mod.rs
src/snapshot/: core.rs  mod.rs  path.rs  state.rs
src/util/: common.rs  config.rs  convert.rs  drs.rs  globals.rs  io.rs  logging.rs  mod.rs  platform.rs  sha.rs  sudo.rs
tests/: config_test.rs  defaults_test.rs  domains_test.rs  external_test.rs  inline_table_test.rs  integration_test.rs  snapshot_test.rs  type_conversion_test.rs
tools/: licenser.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+101 files in other folders)
