[package]
name = "cutler"
version = "0.4.8"
edition = "2024"
description = "Powerful, declarative settings management for your Mac, with speed."
license = "MIT"

[dependencies]
toml = "0.8"
clap = { version = "4", features = ["derive"] }
lazy_static = "1.5.0"
clap_complete = "4.5.47"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
ureq = "3.0.11"
semver = "1.0.26"
anyhow = "1.0.98"

[dev-dependencies]
tempfile = "3.19.1"

[workspace]
members = [".", "xtask"]
