[package]
name = "cutler"
version = "0.11.5"
edition = "2024"
description = "Powerful, declarative settings management for your Mac, with speed."
homepage = "https://cutlercli.github.io/"
repository = "https://github.com/cutlerCLI/cutler"
keywords = ["macos", "macos-automation", "cutler", "declarative-settings"]
readme = "README.md"
license = "MIT"
build = "build.rs"
categories = ["command-line-utilities"]

[dependencies]
toml = "0.9"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.58"
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0.27"
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
anstyle = "1.0.11"
toml_edit = "0.23"
dialoguer = "0.12.0"
self_update = { version = "0.42.0", features = ["compression-zip-deflate"] }
async-trait = "0.1.89"
defaults-rs = "0.3.2"
nix = { version = "0.30.1", features = ["user"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
which = "8.0.0"
mac-notification-sys = "0.6.6"
dirs = "6.0.0"
once_cell = "1.21.3"

[dev-dependencies]
tempfile = "3.23.0"

[workspace]
members = [".", "xtask"]
